# truescad

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.mjs  ci.sh  package-lock.json  package.json  serve.mjs
.github/workflows/: ci.yml  deploy.yml
benches/: render.rs
kiss3ddeps/: Cargo.toml  lib.rs
language-specs/: truescad-lua.lang
luascad/: Cargo.toml  lib.rs  lobject.rs  lobject_vector.rs  luascad.rs  printbuffer.rs  sandbox.rs  tests.rs
luascad/tests/: eval.rs
src/: editor.rs  lib.rs  luascad.rs  main.rs  menu.rs  mesh_view.rs  object_widget.rs  primitive.rs  render.rs  renderer.glsl  settings.rs  shader.rs  window.rs
src/primitives/: cone.rs  csg.rs  cylinder.rs  deform.rs  mod.rs  planes.rs  sphere.rs  transforms.rs
tests/: browser.mjs  eval.rs
web/: index.html  main.css  main.js
