[workspace]
members = [".", "kiss3ddeps"]

[package]
name = "truescad"
version = "0.8.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

[dependencies]
dirs = "6.0"
sourceview4 = "0.5"
gdk = "0.18"
cairo-rs = "0.18"
implicit3d = "0.16"
nalgebra = "0.34"
piccolo = "0.3"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
num-traits = "0.2"
tessellation = "0.9"
kiss3ddeps = { path = "kiss3ddeps" }
stl_io = "0.11"
kiss3d = "0.37"
glib = "0.18"
pollster = "0.4"

[dev-dependencies]
bencher = "0.1"

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

# [profile.release]
# lto = true

[[bench]]
name = "render"
harness = false
