[package]
name = "truescad"
version = "0.9.0"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
nalgebra = "0.34"
piccolo = "0.3"
stl_io = "0.11"
tessellation = "0.11"
wasm-bindgen = "0.2"

# getrandom needs explicit WASM features for both the 0.2.x and 0.3.x lines
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
